Project

General

Profile

Actions

Bug #47977

closed

fs: "./bin/ceph daemon client.admin.133423 config show" do not work

Added by Xiubo Li over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
fs
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The "client.admin.133423 " is a fuse client for cephfs:

# ./bin/ceph daemon client.admin.133423 config show
childargs[1] = client.admin.133423
sockpath = b'/tmp/ceph-asok.jr2hGq/client.admin.133423.141973.asok'
admin_socket: exception getting command descriptions: [Errno 2] No such file or directory
#
Actions #1

Updated by Xiubo Li over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 37785
Actions #2

Updated by Kefu Chai over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF