common/config: do not expand the pid for socket admin

For the 'admin_socket' in ceph.conf, if the $pid is specified, for
the daemon it will expanded to the actual daemon PID and then as
the admin socket. But if we use the 'ceph-conf' tool to parse the
admin_socket path again by using:

$ ceph-conf --name client.admin.133423 --show-config-value admin_socket

The --name has already included the daemon PID, but the 'ceph-conf'
will expand the '$pid' again, which is incorrect.

Fixes: https://tracker.ceph.com/issues/47977
Signed-off-by: Xiubo Li <xiubli@redhat.com>